--- a/index.html
+++ b/index.html
@@ -105,6 +105,33 @@
                             </span>
                         </div>
                     </a>
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li>
+                                <a
+                                    href="#!"
+                                    class="navbar__link navbar__link--active"
+                                >
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">Services</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="navbar__link">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="action__login">Log In</a>
+                        <a href="#!" class="btn action__signup">Sign Up</a>
+                    </div>
                 </div>
             </div>
         </header>
