--- a/index.html
+++ b/index.html
@@ -135,6 +135,38 @@
                         >
                     </div>
                 </div>
+                <!-- Hero -->
+                <section class="hero">
+                    <section class="hero__content">
+                        <h1 class="hero__heading">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="btn">Book Online</a>
+                            <span class="hero__phone"
+                                >or call (123) 456-7890</span
+                            >
+                        </div>
+                    </section>
+                    <div class="hero__media">
+                        <div class="hero__images">
+                            <img
+                                src="./assets/images/hero-01.jpg"
+                                alt=""
+                                class="hero__img"
+                            />
+                            <img
+                                src="./assets/images/hero-02.jpg"
+                                alt=""
+                                class="hero__img"
+                            />
+                        </div>
+                    </div>
+                </section>
             </div>
         </header>
     </body>
