--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         </div>
                     </section>
                     <div class="hero__media">
-                        <div class="hero__images">
+                        <figure class="hero__images">
                             <img
                                 src="./assets/images/hero-01.jpg"
                                 alt=""
@@ -164,7 +164,7 @@
                                 alt=""
                                 class="hero__img"
                             />
-                        </div>
+                        </figure>
                     </div>
                 </section>
             </div>
