--- a/index.html
+++ b/index.html
@@ -317,6 +317,36 @@
                     </div>
                 </div>
             </section>
+            <!-- Feature -->
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__inner">
+                        <figure class="feature__images">
+                            <img
+                                src="./assets/images/feature-01.jpg"
+                                alt=""
+                                class="feature_img"
+                            />
+                            <img
+                                src="./assets/images/feature-02.jpg"
+                                alt=""
+                                class="feature_img"
+                            />
+                        </figure>
+                        <section class="feature__content">
+                            <h3 class="section-heading">
+                                Take back your smile with shine.
+                            </h3>
+                            <p class="section-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="#!" class="btn feature__cta">Learn More</a>
+                        </section>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
