--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
             rel="stylesheet"
         />
+        <!-- Animation -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
     </head>
     <body>
         <!-- Header -->
@@ -138,7 +143,9 @@
                 <!-- Hero -->
                 <section class="hero">
                     <section class="hero__content">
-                        <h1 class="hero__heading">
+                        <h1
+                            class="hero__heading animate__animated animate__bounce"
+                        >
                             Exceptional dental care for all ages.
                         </h1>
                         <p class="hero__desc">
@@ -186,7 +193,7 @@
                             <img
                                 src="./assets/images/service.jpg"
                                 alt=""
-                                class="service__img"
+                                class="service__img wow animate__slideInLeft"
                             />
                         </figure>
                         <div class="service__content">
@@ -779,5 +786,16 @@
                 </div>
             </div>
         </footer>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"
+            integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            new WOW({
+                animateClass: "animate__animated",
+            }).init();
+        </script>
     </body>
 </html>
